NewArchive/94fafffafea9fd864d4ecd95ca45d1fc-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘constexpr bool detail::find_factor(std::size_t, std::size_t, std::size_t)’:
main.cpp:32:47: error: expected ‘;’ before ‘)’ token
        || find_factor(n, mid(low, high), high));
                                               ^
main.cpp:32:47: error: expected primary-expression before ‘)’ token
main.cpp:32:47: error: expected ‘;’ before ‘)’ token
main.cpp:33:1: error: body of constexpr function ‘constexpr bool detail::find_factor(std::size_t, std::size_t, std::size_t)’ not a return-statement
 }
 ^
main.cpp: In function ‘int main()’:
main.cpp:51:3: error: non-constant condition for static assertion
   static_assert(is_prime(100000007),  "100000007 is a prime!");
   ^
main.cpp:51:35:   in constexpr expansion of ‘is_prime(100000007ul)’
main.cpp:45:60: error: ‘constexpr bool detail::find_factor(std::size_t, std::size_t, std::size_t)’ called in a constant expression
                 || !find_factor(n, 1, (ceilsqrt(n) + 1) / 2))));
                                                            ^
main.cpp:52:3: error: non-constant condition for static assertion
   static_assert(is_prime(1000000007), "1000000007 is a prime!");
   ^
main.cpp:52:36:   in constexpr expansion of ‘is_prime(1000000007ul)’
main.cpp:45:60: error: ‘constexpr bool detail::find_factor(std::size_t, std::size_t, std::size_t)’ called in a constant expression
                 || !find_factor(n, 1, (ceilsqrt(n) + 1) / 2))));
                                                            ^
main.cpp:53:3: error: non-constant condition for static assertion
   static_assert(is_prime(1000000009), "1000000009 is a prime!");
   ^
main.cpp:53:36:   in constexpr expansion of ‘is_prime(1000000009ul)’
main.cpp:45:60: error: ‘constexpr bool detail::find_factor(std::size_t, std::size_t, std::size_t)’ called in a constant expression
                 || !find_factor(n, 1, (ceilsqrt(n) + 1) / 2))));
                                                            ^
main.cpp:54:3: error: non-constant condition for static assertion
   static_assert(!is_prime(1000000011), "1000000011 is not a prime!");
   ^
main.cpp:54:37:   in constexpr expansion of ‘is_prime(1000000011ul)’
main.cpp:45:60: error: ‘constexpr bool detail::find_factor(std::size_t, std::size_t, std::size_t)’ called in a constant expression
                 || !find_factor(n, 1, (ceilsqrt(n) + 1) / 2))));
                                                            ^
main.cpp:55:3: error: non-constant condition for static assertion
   static_assert(is_prime(1000000000039), "1000000000039 is a prime.!");
   ^
main.cpp:55:39:   in constexpr expansion of ‘is_prime(1000000000039ul)’
main.cpp:45:60: error: ‘constexpr bool detail::find_factor(std::size_t, std::size_t, std::size_t)’ called in a constant expression
                 || !find_factor(n, 1, (ceilsqrt(n) + 1) / 2))));
                                                            ^
